--- a/environment.yml
+++ b/environment.yml
@@ -1,24 +1,24 @@
 name: spectrogram-segmentation
 channels:
-  - conda-forge
   - defaults
+  - conda-forge
+  - pytorch
 dependencies:
-  - python=3.8
-  - jupyter=1.0.*
-  - matplotlib=3.4.*
+  - python=3.10
+  - jupyter=1.0.0  # Jupyter system, including the notebook and the IPython kernel, all in one go.
   - numpy=1.26.*
-  - pandas=1.3.*
-  - scikit-learn=1.0.*
-  - pytorch=1.10.*
-  - torchvision=0.11.*
-  - pillow=8.4.*
-  - scipy=1.7.*
+  - pandas=2.2.*
+  - matplotlib=3.8.*
+  - scipy=1.11.*
+  - scikit-learn=1.3.*
+  - pillow=10.2.*
+  - pytorch=2.2.*
+  - pytorch-lightning=2.0.*
+  - torchvision=0.15.*
+  - torchmetrics=1.1.*
   - pyyaml=6.0.*
-  - h5py=3.4.*
-  - pyhdf=0.11.*
-  - cffi=1.14.*
-  - gdal=3.3.*
-  - torchmetrics=0.5.*
-  - pytorch-lightning=1.5.*
-  - chardet=4.0.*
-  - tensorboard=2.6.*
+  - cffi=1.16.*
+  - gdal=3.6.*
+
+# Note: We use Conda for this example because it is the easiest way to install GDAL, which is required to read
+#  the spectrogram masks from the spectrogram sensing dataset.
