--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,10 @@
 [flake8]
 max-line-length = 119
-extend-ignore = W503
-exclude = .git, .github, .idea, .vscode
+extend-ignore = W503, E203, E701
+exclude = .git, .github, venv, .venv, env, .env, .idea, .vscode
 max-complexity = 10
 
 [flake8_nb]
 max-line-length = 119
-extend-ignore = W503, E402
-exclude = .git, .github, .idea, .vscode
+extend-ignore = W503, E402, E203, E701
+exclude = .git, .github, venv, .venv, env, .env, .idea, .vscode
