--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,11 @@
 name: spectrogram-segmentation
 channels:
-  - defaults
-  - conda-forge
   - pytorch
+  - nvidia
+  - conda-forge
+  - defaults
 dependencies:
-  - python=3.10
+  - python=3.11
   - jupyter=1.0.0  # Jupyter system, including the notebook and the IPython kernel, all in one go.
   - numpy=1.26.*
   - pandas=2.2.*
@@ -12,13 +13,12 @@ dependencies:
   - scipy=1.11.*
   - scikit-learn=1.3.*
   - pillow=10.2.*
-  - pytorch=2.2.*
+  - pytorch=2.3.*
   - pytorch-lightning=2.0.*
-  - torchvision=0.15.*
   - torchmetrics=1.1.*
-  - pyyaml=6.0.*
-  - cffi=1.16.*
   - gdal=3.6.*
+  - pip:
+    - torchvision==0.18.*
 
 # Note: We use Conda for this example because it is the easiest way to install GDAL, which is required to read
 #  the spectrogram masks from the spectrogram sensing dataset.
