Adding pip. While not strictly required to list pip explicitly, not doing so might cause issues for some users.

--- a/environment.yml
+++ b/environment.yml
@@ -6,6 +6,7 @@ channels:
   - defaults
 dependencies:
   - python=3.11
+  - pip=23.3.*
   - jupyter=1.0.0  # Jupyter system, including the notebook and the IPython kernel, all in one go.
   - numpy=1.26.*
   - pandas=2.2.*
