--- a/environment.yml
+++ b/environment.yml
@@ -6,20 +6,20 @@ channels:
   - defaults
 dependencies:
   - python=3.11
-  - pip=23.3.*
+  - pip=23.3.2
   - jupyter=1.0.0  # Jupyter system, including the notebook and the IPython kernel, all in one go.
-  - numpy=1.26.*
-  - pandas=2.2.*
-  - matplotlib=3.8.*
-  - scipy=1.11.*
-  - scikit-learn=1.3.*
-  - pillow=10.2.*
-  - pytorch=2.3.*
-  - pytorch-lightning=2.0.*
-  - torchmetrics=1.1.*
-  - gdal=3.6.*
+  - numpy=1.26.4
+  - pandas=2.2.2
+  - matplotlib=3.8.4
+  - pillow==9.5.0
+  - scipy=1.11.4
+  - scikit-learn=1.3.2
+  - pytorch=2.3.0
+  - pytorch-lightning=2.0.9
+  - torchmetrics=1.1.2
+  - gdal=3.6.2
   - pip:
-    - torchvision==0.18.*
+    - torchvision==0.18.0
 
 # Note: We use Conda for this example because it is the easiest way to install GDAL, which is required to read
 #  the spectrogram masks from the spectrogram sensing dataset.
