--- a/environment.yml
+++ b/environment.yml
@@ -11,7 +11,7 @@ dependencies:
   - numpy=1.26.4
   - pandas=2.2.2
   - matplotlib=3.8.4
-  - pillow==9.5.0
+  - pillow=9.5.0
   - scipy=1.11.4
   - scikit-learn=1.3.2
   - pytorch=2.3.0
