--- a/environment.yml
+++ b/environment.yml
@@ -15,7 +15,7 @@ dependencies:
   - scipy=1.11.4
   - scikit-learn=1.3.2
   - pytorch=2.3.0
-  - pytorch-lightning=2.0.9
+  - lightning=2.0.9
   - torchmetrics=1.1.2
   - gdal=3.6.2
   - pip:
