--- a/environment.yml
+++ b/environment.yml
@@ -18,6 +18,7 @@ dependencies:
   - lightning=2.0.9
   - torchmetrics=1.1.2
   - gdal=3.6.2
+  - tabulate=0.9.0
   - pip:
     - torchvision==0.18.0
 
